@@ -1,5 +1,9 @@
 2006-02-03  Sven Panne  <sven.panne@aedion.de>
 
+	* src/al_source.c, src/al_types.h, test/testloop.c: Removed the
+	AL_STREAMING source attribute. It was non-standard, undocumented and
+	didn't do anything.
+
 	* configure.ac: Use AC_DEFINE instead of specifying preprocessor defines
 	by hand.
 
